# simple-lang

./: .gitignore  .neonpath  .travis.yml  CMakeLists.txt  README.md  SConstruct  appveyor.yml  build.sh  build4LDM  build_thunks  compiler.cpp
contrib/Project1/: Project1.vcxproj  Project1.vcxproj.filters
contrib/msvc/: NeonBuild.props  NeonBuildTool.vsprops  NeonStub.vcxproj  NeonStub.vcxproj.filters  SConsClean.props  SConstruct.props  Tests.vcxproj  neon-lang.sln  neon.vcxproj  neon.vcxproj.filters  neonbind.vcxproj  neonbind.vcxproj.filters  neonbundle.vcxproj  neonbundle.vcxproj.filters  neonc.vcxproj  neonc.vcxproj.filters  neondis.vcxproj  neondis.vcxproj.filters  neonlibrary.vcxproj  neonlibrary.vcxproj.filters  neonx.vcxproj  neonx.vcxproj.filters
contrib/msvc/Tests/: fuzz_lexer.vcxproj  fuzz_lexer.vcxproj.filters  fuzz_parser.vcxproj  fuzz_parser.vcxproj.filters  perf_lexer.vcxproj  perf_lexer.vcxproj.filters  test_lexer.vcxproj  test_lexer.vcxproj.filters
contrib/msvc/neon_extension/: neon_extension.vcxproj  neon_extension.vcxproj.filters
contrib/msvc/test_array_support/: test_array_support.vcxproj  test_array_support.vcxproj.filters
contrib/test_format/: test_format.c  test_format.vcxproj  test_format.vcxproj.filters
contrib/test_number_to_string/: test_number_to_string.vcxproj  test_number_to_string.vcxproj.filters
contrib/test_path_support/: test_path_support.vcxproj  test_path_support.vcxproj.filters
contrib/test_strings/: test_strings.vcxproj  test_strings.vcxproj.filters
exec/cnex/: CMakeLists.txt  SConstruct  array.c  array.h  bytecode.c  cell.c  cell.h  cnex.c  enums.h  exclude.txt  exec.h  extension.c  gc.c  gc.h  global.c  global.h  httpserver.c  httpserver.h  nstring.c  nstring.h  number.c  number.h  object.c  object.h  opcode.h  run_test.py  support.c  test_number.c  test_number_to_string.c  test_path_support.c  util.h
exec/cnex/lib/: binary.c  binary.h  io.c  io.h  math.c  math.h  os_posix.c  os_win32.c  posix.c  posix.h  random.c  random.h  runtime.c  runtime.h  time.h  time_win32.c
exec/csnex/: Bytecode.cs  CMakeLists.txt  Cell.cs  Enums.cs  Exceptions.cs  Exec.cs  Extensions.cs  Global.cs  Number.cs  Object.cs  Program.cs  csnex.cs  csnex.csproj  exclude.txt  exec.cs  opcode.cs  rtl_exec.cs  run_test.py  test_number_to_string.cs  test_number_to_string_cs.csproj
exec/csnex/Properties/: AssemblyInfo.cs
exec/csnex/lib/: file.cs  file_posix.cs  file_win32.cs  math.cs  net.cs  os.cs  random.cs  runtime.cs  sys.cs  time.cs
lib/: curses.cpp  file.cpp  file.neon  global.cpp  hash.cpp  mmap_posix.cpp  net.cpp  os_posix.cpp  process_posix.cpp  serial.cpp  serial.neon  serial_const.cpp  serial_posix.cpp  serial_win32.cpp  sqlite.cpp  string.cpp  time.cpp
lib/nd.proj/: Menu.txt
samples/nd.proj/: Menu.txt
samples/terminal/: term.neon
scripts/: make_thunks.py  run_cnex.py
src/: bundle.cpp  bytecode.cpp  bytecode.h  cell.h  disassembler.cpp  exec.cpp  format.cpp  httpserver.cpp  lexer.cpp  neonbind.cpp  neondis.cpp  neonx.cpp  number.cpp  parser.cpp  rtl_compile.cpp  rtl_exec.cpp  rtl_posix.cpp  stdutl.cpp  stdutl.h  support.cpp  utf8string.h  util.cpp
t/: inline-construct-record.neon  inline-init-record.neon
t/errors/: N3185.neon
